# Cortex-Protocol

./: .gitignore  ARCHITECTURE-ASYNC.md  ARCHITECTURE.md  ARCHITECTURE_SPEC.md  CHANGELOG.md  CLINICAL-BRIDGE.md  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  CORTEX_PROTOCOL_COMPLETE_v0_5_1.txt  DISCLAIMER.md  GOVERNANCE-BASE.md  GOVERNANCE.md  LEXICON.md  LICENSE  MANIFESTO.md  MODULE-ISOLATION.md  README.md  ROADMAP-CLINICAL.md  ROADMAP.md  SECURITY.md  STANDARD.md  USER-DATA-MODEL.md  VISION_2045.md  WHITE_PAPER.md  keros_seal.py  release_notes.md  requirements.txt  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  pr-gate.yml  sal-boundary-guard.yml
docs/: LEXICON.md  OPEN_ISSUES.md  ROADMAP.md  index.md
docs/architecture/: ARCHITECTURE-ASYNC.md  ARCHITECTURE.md  MODULE-ISOLATION.md  NEUTRALITY.md  USER-DATA-MODEL.md
docs/clinical/: CLINICAL-BRIDGE.md  ROADMAP-CLINICAL.md  WHITE_PAPER.md
docs/governance/: GOVERNANCE-BASE.md  GOVERNANCE-NODES.md  GOVERNANCE.md  STANDARD.md
docs/hardware/: BRAINFLOW_SETUP.md
docs/legal/: CONSTITUTION.md
src/ethos/: ethos_consent.py
src/governance/: policy_validator.py  white_branch_threshold.py
src/keros/: brainflow_adapter.py  bus_to_sal_bridge.py  keros_seal.py  sensor_channel.py
src/layer1/: README.md
src/layer1/rust/: Cargo.toml  agora_diff_privacy.rs  matrix_inspector.rs
src/limes/: limes_proof.py
tests/: test_brainflow_adapter.py  test_cognitive_neutrality.py  test_cognitive_shield.py  test_cognitive_shield_v2_smoke.py  test_ethos_consent.py
(+16 files in other folders)
